...
          style: textTheme.titleLarge?.copyWith(color: colorScheme.primary),
        ),
        actions: [
          if (Platform.isIOS)
            IconButton(
              onPressed: () => _showNewTaskBottomSheet(context),
              icon: const Icon(key: Key("addNewTaskBtn"), Icons.add),
            ),
        ],
      ),
      body: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 16.0),
        child: Column(
...
